--- a/src/styles.css
+++ b/src/styles.css
@@ -1,156 +1,163 @@
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .toolbar {
-  display: flex;
+    display: flex;
 
-  width: 100%;
-  height: 64px;
-  margin-bottom: 16px;
+    width: 100%;
+    height: 64px;
+    margin-bottom: 16px;
 
-  background-color: #8BC34A;
-  box-shadow: 0 4px 5px #888888;
+    background-color: #8BC34A;
+    box-shadow: 0 4px 5px #888888;
 
-  font-size: 34px;
-  align-items: center;
+    font-size: 34px;
+    align-items: center;
 }
 
 /* Toolbar title */
 .toolbar > div {
-  opacity: 0.87;
-  margin-left: 15px;
+    opacity: 0.87;
+    margin-left: 40%;
 }
 
 /* Main container (card) */
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-  width: 80%;
-  height: 100%;
+    width: 80%;
+    height: 100%;
 
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 
-  border-radius: 2px;
-  box-shadow: 0 5px 10px #888888;
+    border-radius: 2px;
+    box-shadow: 0 5px 10px #888888;
+}
+
+.input {
+    margin: 0;
+    list-style: none;
+    padding: 20px;
+    background: rgba(130, 214, 72, 0.22);
+    overflow: auto;
+    vertical-align: middle;
+
+}
+
+.inputA {
+    float: left;
+    position: relative;
+    left: 40px;
+}
+
+.inputB {
+    float: right;
+    position: relative;
+    right: 40px;
 }
 
 /* Typography */
 .typo-headline {
-  font-family: 'Roboto', sans-serif;
-  font-size: 24px;
-  opacity: 0.87;
+    font-size: 24px;
+    opacity: 0.87;
+    align-items: center;
+}
+
+.material-icons {
+    vertical-align: middle;
 }
 
 .typo-code {
-  font-family: 'Roboto Mono', monospace;
+
+    width: 500px;
 }
 
 .headline {
-  margin: 15px;
+    margin: 15px;
 }
 
 /* Expresion text field */
 input {
-  font-size: 24px;
+    font-size: 24px;
 
-  margin-left: 15px;
-  margin-right: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 /* User guide */
 .user-guide {
-  padding: 15px;
+    padding: 15px;
 
-  margin-top: 15px;
-  margin-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
-  background-color: #F1F8E9;
+    background-color: #F1F8E9;
 }
 
 .user-guide > .notice {
-  margin-top: 25px;
+    margin-top: 25px;
 }
 
 /* Tautology */
 .is-equivalence {
-  margin: 25px;
-  font-size: 34px;
+    margin: 25px;
+    font-size: 34px;
 
-  display: none;
+    display: none;
 }
 
 .is-equivalence .is {
-  color: #4CAF50;
-  display: none;
+    color: #4CAF50;
+    display: none;
 }
 
 .is-equivalence .is-not {
-  color: #F44336;
-  display: none;
+    color: #F44336;
+    display: none;
 }
-
 
 /* Table */
 .table {
-  margin: 15px;
-  display: none;
+    margin: 15px;
+    display: none;
 }
 
 table {
-  margin-top: 10px;
-  font-size: 18px;
+    margin-top: 10px;
+    font-size: 18px;
 
-  border-collapse: collapse;
-  border: 1px solid black;
+    border-collapse: collapse;
+    border: 1px solid black;
 }
 
 th {
-  opacity: 0.87;
-  padding: 5px;
+    opacity: 0.87;
+    padding: 5px;
 }
 
 td {
-  min-width: 18px;
-  text-align: center;
+    min-width: 18px;
+    text-align: center;
 }
 
 table .result {
-  text-align: right;
+    text-align: right;
 }
 
 table .title {
-  background-color: #AED581;
+    background-color: #AED581;
 }
 
 table .true {
-  background-color: #C5E1A5;
+    background-color: #C5E1A5;
 }
-.table {
-  margin: 15px;
-  display: none;
-}
-
-
-th {
-  opacity: 0.87;
-  padding: 5px;
-}
-
-td {
-  min-width: 18px;
-  text-align: center;
-}
-
-
-
